--- a/Background_Removal.ipynb
+++ b/Background_Removal.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPVjE2DykKDm1BlgVuSV7f1",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -2756,6 +2758,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/VidBoard/background_removal/blob/main/Background_Removal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
